# pulsestream

./: .gitignore  README.md  docker-compose.yml
engine/: CMakeLists.txt  Dockerfile
engine/data/: _offsets.json
engine/include/: server.h  store.h
engine/src/: client.cpp  main.cpp  server.cpp  store.cpp
gateway/: Dockerfile  package-lock.json  package.json  server.js
gateway/src/: engineClient.js  index.js
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.jsx  styles.css
